--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   url_launcher: ^6.1.12
   seo_renderer: ^0.6.0
   firebase_core: ^2.15.1
+  mobx: ^2.2.0
+  flutter_modular: ^6.3.1
+  flutter_mobx: ^2.0.6+5
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +53,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.6
+  mobx_codegen: ^2.3.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
