--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   mobx: ^2.2.0
   flutter_modular: ^6.3.1
   flutter_mobx: ^2.0.6+5
+  animated_text_kit: ^4.2.2
 
 dev_dependencies:
   flutter_test:
