done all blocks to web device

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -99,6 +99,18 @@ flutter:
       fonts:
         - asset: fonts/rock_salt/RockSalt-Regular.ttf
           weight: 400
+    - family: SF Pro
+      fonts:
+        - asset: fonts/sf_pro/SF-Pro-Text-Bold.otf
+          weight: 700
+        - asset: fonts/sf_pro/SF-Pro-Text-Semibold.otf
+          weight: 600
+        - asset: fonts/sf_pro/SF-Pro-Text-Medium.otf
+          weight: 500
+        - asset: fonts/sf_pro/SF-Pro-Text-Regular.otf
+          weight: 400
+        - asset: fonts/sf_pro/SF-Pro-Text-Light.otf
+          weight: 300
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
